--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend="setuptools.build_meta"
 
 [project]
 name = "wes_palette"
-authors = [{name = "A U", email = "Your_Email@gmail.com"}]
+authors = [{name = "AU", email = "au2232@columbia.edu"}]
 description="Wes Anderson film color palette extension for matplotlib"
 readme = "README.md"
 version = "0.1.0"
