--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+  - repo: https://github.com/mgedmin/check-manifest
+    rev: "0.46"
+    hooks:
+    -   id: check-manifest 
   - repo: https://github.com/floatingpurr/sync_with_poetry
     rev: 0.4.0
     hooks:
